# Time-Series-App

./: .pre-commit-config.yaml  Makefile  README.md  Time Series App.py  mypy.ini  pyproject.toml  typecheck.sh
lightning_logs/version_0/: events.out.tfevents.1745052354.Weldons-MacBook-Pro-2.local.38833.0  events.out.tfevents.1745052354.Weldons-MacBook-Pro-2.local.38833.1  events.out.tfevents.1745052361.Weldons-MacBook-Pro-2.local.38833.7  events.out.tfevents.1745052361.Weldons-MacBook-Pro-2.local.38833.8
lightning_logs/version_1/: events.out.tfevents.1745052356.Weldons-MacBook-Pro-2.local.38833.2  events.out.tfevents.1745052361.Weldons-MacBook-Pro-2.local.38833.9
lightning_logs/version_10/: events.out.tfevents.1745071478.Weldons-MacBook-Pro-2.local.51711.3  events.out.tfevents.1745071479.Weldons-MacBook-Pro-2.local.51711.4
lightning_logs/version_11/: events.out.tfevents.1745113640.Weldons-MacBook-Pro-2.local.52895.0  events.out.tfevents.1745113643.Weldons-MacBook-Pro-2.local.52895.1  events.out.tfevents.1745113655.Weldons-MacBook-Pro-2.local.52895.2
lightning_logs/version_2/: events.out.tfevents.1745052357.Weldons-MacBook-Pro-2.local.38833.3  events.out.tfevents.1745052364.Weldons-MacBook-Pro-2.local.38833.10
lightning_logs/version_3/: events.out.tfevents.1745052358.Weldons-MacBook-Pro-2.local.38833.4  events.out.tfevents.1745052365.Weldons-MacBook-Pro-2.local.38833.11
lightning_logs/version_4/: events.out.tfevents.1745052359.Weldons-MacBook-Pro-2.local.38833.5  events.out.tfevents.1745052367.Weldons-MacBook-Pro-2.local.38833.12
lightning_logs/version_5/: events.out.tfevents.1745052360.Weldons-MacBook-Pro-2.local.38833.6  events.out.tfevents.1745052368.Weldons-MacBook-Pro-2.local.38833.13
lightning_logs/version_6/: events.out.tfevents.1745052368.Weldons-MacBook-Pro-2.local.38833.14  events.out.tfevents.1745052377.Weldons-MacBook-Pro-2.local.38833.15
lightning_logs/version_7/: events.out.tfevents.1745066335.Weldons-MacBook-Pro-2.local.50464.0  events.out.tfevents.1745066337.Weldons-MacBook-Pro-2.local.50464.1
lightning_logs/version_8/: events.out.tfevents.1745066585.Weldons-MacBook-Pro-2.local.50561.0  events.out.tfevents.1745066589.Weldons-MacBook-Pro-2.local.50561.1  events.out.tfevents.1745066600.Weldons-MacBook-Pro-2.local.50561.2
lightning_logs/version_9/: events.out.tfevents.1745071442.Weldons-MacBook-Pro-2.local.51711.0  events.out.tfevents.1745071445.Weldons-MacBook-Pro-2.local.51711.1  events.out.tfevents.1745071457.Weldons-MacBook-Pro-2.local.51711.2
